feat: no drag for video and imgs, handle tap color on phones

--- a/src/style.css
+++ b/src/style.css
@@ -150,8 +150,19 @@
   z-index: -1;
 }
 
+a{ 
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+img, 
+video {
+  -webkit-user-drag: none;
+}
+
 :root {
   --z-toolbar: 9998;
   --z-dropoverlay: 9999;
   --z-fullscreen: 10000;
 }
+
